# j2subst

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: filters.md
docker/: .dockerignore  Dockerfile  Dockerfile.base  requirements-extra.txt
docker/apt/: sources.debian  sources.krdeb
docker/build-scripts/: image-base.sh  image.sh
docker/extra-scripts/: certifi-extras.sh  divert-rm.sh  dpkg-search.sh
docker/scripts/: apt-clean.sh  apt-env.sh  apt-install.sh  apt-remove.sh  j2subst  openssl-cert-auto-pem.sh  pip-env.sh  python-rm-cache.sh
j2subst/: __init__.py  __main__.py  cli.py  cli_help.py  defaults.py  dumpfmt.py  functions.py  j2subst.py
j2subst/tests/: example.j2
